--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:D:/urfu/programmingLabs/secondKurs/lab8/test-security2db-themeleaf/testdb/students
+spring.datasource.url=jdbc:h2:F:/projectIntellijIdea/programmingLabs/kursach-2024/LASTVERSION/READ_USER_ADMIN-Students/testdb/students
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql= true
